--- a/css/global.css
+++ b/css/global.css
@@ -55,6 +55,10 @@
     --font-1-xs: 600 12px/16px 'Poppins', sans-serif;
   }
 
+
+  :root {
+    --max-width: 1200px;
+  }
   
 
 
@@ -62,11 +66,22 @@ body {
     font-family: Roboto, sans-serif;
     margin: 0;
     color: var(--c5);
+   
+
 }
 
 
 h1,h2,h3,p {
     margin: 0;
+}
+
+h1 {
+  font: var(--font-1-xxl);
+  color: var(--w);
+}
+
+.ponto-decorativo {
+  color: var(--p1);
 }
 
 ul {
@@ -79,5 +94,7 @@ img {
     max-width: 100%;
     display: block;
     height: auto;
+    border-radius: 5px;
 }
+
 
