--- a/css/global.css
+++ b/css/global.css
@@ -1,78 +1,79 @@
 :root {
-    --c12: #000000;
-    --c11: #111111;
-    --c10: #2E2E2E;
-    --c9: #404040;
-    --c8: #595959;
-    --c7: #717171;
-    --c6: #9C9C9C;
-    --c5: #B2B2B2;
-    --c4: #CCCCCC;
-    --c3: #DEDEDE;
-    --c2: #EDEDED;
-    --c1: #F7F7F7;
-    --w: #FFFFFF;
-    --p5: #332200;
-    --p4: #664400;
-    --p3: #A66F00;
-    --p2: #E4A30B;
-    --p1: #FFBB00;
-  }
-  
-  :root {
-    --space-004: 4px;
-    --space-008: 8px;
-    --space-012: 12px;
-    --space-016: 16px;
-    --space-020: 20px;
-    --space-024: 24px;
-    --space-032: 32px;
-    --space-036: 36px;
-    --space-040: 40px;
-    --space-048: 48px;
-    --space-060: 60px;
-    --space-072: 72px;
-    --space-080: 80px;
-    --space-120: 120px;
-    --space-160: 160px;
-    --space-200: 200px;
-  }
-
-  :root {
-    --font-1-xxl: 600 64px/72px 'Poppins', sans-serif;
-    --font-1-xl: 600 32px/40px 'Poppins', sans-serif;
-    --font-1-l: 400 24px/36px 'Poppins', sans-serif;
-    --font-2-l: 400 24px/36px 'Roboto', sans-serif;
-    --font-2-l-b: 500 24px/36px 'Roboto', sans-serif;
-    --font-2-l-b-tracking: 1.5%;
-    --font-2-l-b-transform: uppercase;
-    --font-1-m: 400 18px/24px 'Poppins', sans-serif;
-    --font-1-m-b: 600 18px/24px 'Poppins', sans-serif;
-    --font-2-m: 500 18px/24px 'Roboto', sans-serif;
-    --font-1-s: 400 16px/24px 'Poppins', sans-serif;
-    --font-2-s: 400 16px/24px 'Roboto', sans-serif;
-    --font-2-xs: 400 14px/20px 'Roboto', sans-serif;
-    --font-1-xs: 600 12px/16px 'Poppins', sans-serif;
-  }
-
-
-  :root {
-    --max-width: 1200px;
-  }
-  
-
-
-body {
-    font-family: Roboto, sans-serif;
-    margin: 0;
-    color: var(--c5);
-   
-
+  --c12: #000000;
+  --c11: #111111;
+  --c10: #2e2e2e;
+  --c9: #404040;
+  --c8: #595959;
+  --c7: #717171;
+  --c6: #9c9c9c;
+  --c5: #b2b2b2;
+  --c4: #cccccc;
+  --c3: #dedede;
+  --c2: #ededed;
+  --c1: #f7f7f7;
+  --w: #ffffff;
+  --p5: #332200;
+  --p4: #664400;
+  --p3: #a66f00;
+  --p2: #e4a30b;
+  --p1: #ffbb00;
 }
 
+:root {
+  --space-004: 4px;
+  --space-008: 8px;
+  --space-012: 12px;
+  --space-016: 16px;
+  --space-020: 20px;
+  --space-024: 24px;
+  --space-032: 32px;
+  --space-036: 36px;
+  --space-040: 40px;
+  --space-048: 48px;
+  --space-060: 60px;
+  --space-072: 72px;
+  --space-080: 80px;
+  --space-120: 120px;
+  --space-160: 160px;
+  --space-200: 200px;
+}
 
-h1,h2,h3,p {
-    margin: 0;
+:root {
+  --font-1-xxl: 600 64px/72px "Poppins", sans-serif;
+  --font-1-xl: 600 32px/40px "Poppins", sans-serif;
+  --font-1-l: 400 24px/36px "Poppins", sans-serif;
+  --font-2-l: 400 24px/36px "Roboto", sans-serif;
+  --font-2-l-b: 500 24px/36px "Roboto", sans-serif;
+  --font-2-l-b-tracking: 1.5%;
+  --font-2-l-b-transform: uppercase;
+  --font-1-m: 400 18px/24px "Poppins", sans-serif;
+  --font-1-m-b: 600 18px/24px "Poppins", sans-serif;
+  --font-2-m: 500 18px/24px "Roboto", sans-serif;
+  --font-1-s: 400 16px/24px "Poppins", sans-serif;
+  --font-2-s: 400 16px/24px "Roboto", sans-serif;
+  --font-2-xs: 400 14px/20px "Roboto", sans-serif;
+  --font-1-xs: 600 12px/16px "Poppins", sans-serif;
+}
+
+:root {
+  --max-width: 1200px;
+}
+
+body {
+  font-family: Roboto, sans-serif;
+  margin: 0;
+  color: var(--c5);
+}
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
 }
 
 h1 {
@@ -85,16 +86,14 @@ h1 {
 }
 
 ul {
-    margin: 0; 
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 img {
-    max-width: 100%;
-    display: block;
-    height: auto;
-    border-radius: 5px;
+  max-width: 100%;
+  display: block;
+  height: auto;
+  border-radius: 5px;
 }
-
-
