--- a/css/header.css
+++ b/css/header.css
@@ -2,10 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: var(--space-032);
-  max-width: var(--max-width);
-  margin: 0 auto;
-  box-sizing: border-box;
+  padding-bottom: var(--space-032);
 }
 
 .header-nav {
