--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
-@import './global.css';
-@import './header.css';
-@import './main.css';
+@import "./global.css";
+@import "./header.css";
+@import "./main.css";
+@import "./galeria.css";
+@import "./utility/components.css";
