--- a/css/seguro.css
+++ b/css/seguro.css
@@ -1,8 +1,32 @@
 .seguro-bg {
   background-color: var(--c11);
+  box-shadow: inset 0 -80px white, inset 0 80px white;
+}
+
+.seguro-conteudo {
 }
 
 .seguro {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: var(--space-060);
+}
+
+.seguro-caracteristica {
+  display: flex;
+  gap: var(--space-040);
+}
+
+.seguro-subtitulo {
+  margin-bottom: var(--space-020);
+  margin-top: var(--space-120);
+  display: inline-block;
+}
+
+.seguro-titulo {
+  margin-bottom: var(--space-032);
+}
+
+.seguro-texto {
+  margin-bottom: var(--space-020);
 }
