--- a/css/utility/components.css
+++ b/css/utility/components.css
@@ -1,6 +1,11 @@
 .container {
-  padding: var(--space-032) var(--space-032) 0 var(--space-032);
   max-width: var(--max-width);
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.container-2 {
+  max-width: calc(200px + var(--max-width));
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -9,4 +14,16 @@
   color: var(--p1);
   font-family: "Poppins", sans-serif;
   font-weight: 600;
+  position: relative;
+  margin-bottom: var(--space-080);
+  display: inline-block;
+}
+
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--p1);
+  position: absolute;
 }
