--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import "./global.css";
+@import "./utility/components.css";
 @import "./header.css";
 @import "./main.css";
 @import "./galeria.css";
-@import "./utility/components.css";
 @import "./seguro.css";
+@import "./parceiros.css";
