--- a/css/header.css
+++ b/css/header.css
@@ -3,11 +3,13 @@
   justify-content: space-between;
   align-items: center;
   padding-bottom: var(--space-032);
+
 }
 
 .header-nav {
   display: flex;
   gap: var(--space-040);
+  margin-bottom: 32px;
 }
 
 .header-nav li a {
@@ -20,6 +22,7 @@
 
 .header {
   background-color: var(--c12);
+  padding-top: var(--space-020);
 }
 
 .header-nav li a:after {
