--- a/css/seguro.css
+++ b/css/seguro.css
@@ -1,9 +1,7 @@
 .seguro-bg {
   background-color: var(--c11);
-  box-shadow: inset 0 -80px white, inset 0 80px white;
-}
-
-.seguro-conteudo {
+  box-shadow: inset 0 -120px white, inset 0 120px white;
+  margin-top: 120px;
 }
 
 .seguro {
@@ -15,11 +13,12 @@
 .seguro-caracteristica {
   display: flex;
   gap: var(--space-040);
+  margin-bottom: var(--space-200);
 }
 
 .seguro-subtitulo {
   margin-bottom: var(--space-020);
-  margin-top: var(--space-120);
+  margin-top: var(--space-200);
   display: inline-block;
 }
 
@@ -29,4 +28,12 @@
 
 .seguro-texto {
   margin-bottom: var(--space-020);
+}
+
+
+.seguro-img img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  object-position: left;
 }
